--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <li><a class="dropdown-item" href="#">Insight</a></li>
               </ul>
 
-            <a style="margin-left: 0.7em;" class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a style="" class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services
               
             </a>
@@ -81,16 +81,15 @@
               <li><a class="dropdown-item" href="#">Marketing</a></li>
             </ul>
 
-            <a   style="margin-left: 0.4em;"class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a   style=""class="nav-link dropdown-toggle" href="#" id="barDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Products
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu" aria-labelledby="barDropdown">
               <li><a class="dropdown-item" href="#">CRM128
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">PMP128</a></li>
                          </ul>
-
-              <li class="nav-item">
+              <li  style=" margin-top: -2em;"class="nav-item">
               <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="#">Contact Us</a>
               </li>
               
