added other pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               Company
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">About Us</a></li>
+              <li><a class="dropdown-item" href="who-we-are.html">About Us</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Testimonies</a></li>
               <li><hr class="dropdown-divider"></li>
@@ -60,26 +60,26 @@
               
             </a>
             <ul class="dropdown-menu" aria-labelledby="navDropdown">
-              <li><a class="dropdown-item" href="#">Web & Mobile App Developement</a></li>
+              <li><a class="dropdown-item" href="web.html">Web & Mobile App Developement</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Database Developement & Analysis</a></li>
+              <li><a class="dropdown-item" href="data-dev.html">Database Developement & Analysis</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Cloud Services</a></li>
-              <li><hr class="dropdown-divider"></li>
-
-              <li><a class="dropdown-item" href="#">Database Administration</a></li>
+              <li><a class="dropdown-item" href="cloud.html">Cloud Services</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Network Design & Implementation</a></li>
+              <li><a class="dropdown-item" href="data-admin.html">Database Administration</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Leads Generation</a></li>
+              <li><a class="dropdown-item" href="network.html">Network Design & Implementation</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Back Office Support</a></li>
+              <li><a class="dropdown-item" href="lead.html">Leads Generation</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Marketing</a></li>
+              <li><a class="dropdown-item" href="office.html">Back Office Support</a></li>
+              <li><hr class="dropdown-divider"></li>
+
+              <li><a class="dropdown-item" href="market.html">Marketing</a></li>
             </ul>
 
             <a   style=""class="nav-link dropdown-toggle" href="#" id="barDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -224,11 +224,11 @@
 </div>
 </div>
 <div>
-  <p class="tech">
+  <a href="blog.html"><p  class="tech">
     Get more insight into the <br>
-    world of Technology
+    world of Technology</a>
   </p>
-  <div class="card" style="width: 23rem;">
+  <div class="card" style="width: 25rem;">
     <img   src="assets/email.png" class="card-img-top" alt="...">
     <p class="newest">Newest</p>
     <div style="padding-bottom: 3em;"  class="card-body">
@@ -261,6 +261,8 @@
     </div>
   </div>
 </div>
+
+
 
 <footer>
   <div class="footer-container">
