--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img style="width: 10em;" src="assets/Frame 1 1.png"> 
       <div></div>
       <div></div>
-      <button class="Pricing">Get Pricing</button> 
+      <button onclick = "window.location.href='quote.html';" class="Pricing">Get Pricing</button> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
