added new pages and styled

--- a/email.html
+++ b/email.html
@@ -29,7 +29,7 @@
       <img style="width: 10em;" src="assets/Frame 1 1.png"> 
       <div></div>
       <div></div>
-      <button class="Pricing">Get Pricing</button> 
+      <button onclick = "window.location.href='quote.html';" class="Pricing">Get Pricing</button> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -90,12 +90,12 @@
               Products
             </a>
             <ul class="dropdown-menu" aria-labelledby="barDropdown">
-              <li><a class="dropdown-item" href="#">CRM128
+              <li><a class="dropdown-item" href="crm.html">CRM128
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">PMP128</a></li>
                          </ul>
               <li  style=" margin-top: -2em;"class="nav-item">
-              <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="#">Contact Us</a>
+              <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="contact.html">Contact Us</a>
               </li>
               
           </li>
