--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
               Products
             </a>
             <ul class="dropdown-menu" aria-labelledby="barDropdown">
-              <li><a class="dropdown-item" href="#">CRM128
+              <li><a class="dropdown-item" href="crm.html">CRM128
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">PMP128</a></li>
                          </ul>
               <li  style=" margin-top: -2em;"class="nav-item">
-              <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="#">Contact Us</a>
+              <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="contact.html">Contact Us</a>
               </li>
               
           </li>
