--- a/web.html
+++ b/web.html
@@ -25,7 +25,7 @@
       <img style="width: 10em;" src="assets/Frame 1 1.png"> 
       <div></div>
       <div></div>
-      <button class="Pricing">Get Pricing</button> 
+      <button onclick = "window.location.href='quote.html';" class="Pricing">Get Pricing</button> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,7 +44,7 @@
               Company
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">About Us</a></li>
+              <li><a class="dropdown-item" href="who-we-are.html">About Us</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Testimonies</a></li>
               <li><hr class="dropdown-divider"></li>
@@ -60,38 +60,38 @@
               
             </a>
             <ul class="dropdown-menu" aria-labelledby="navDropdown">
-              <li><a class="dropdown-item" href="#">Web & Mobile App Developement</a></li>
+              <li><a class="dropdown-item" href="web.html">Web & Mobile App Developement</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Database Developement & Analysis</a></li>
+              <li><a class="dropdown-item" href="data-dev.html">Database Developement & Analysis</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Cloud Services</a></li>
-              <li><hr class="dropdown-divider"></li>
-
-              <li><a class="dropdown-item" href="#">Database Administration</a></li>
+              <li><a class="dropdown-item" href="cloud.html">Cloud Services</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Network Design & Implementation</a></li>
+              <li><a class="dropdown-item" href="data-admin.html">Database Administration</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Leads Generation</a></li>
+              <li><a class="dropdown-item" href="network.html">Network Design & Implementation</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Back Office Support</a></li>
+              <li><a class="dropdown-item" href="lead.html">Leads Generation</a></li>
               <li><hr class="dropdown-divider"></li>
 
-              <li><a class="dropdown-item" href="#">Marketing</a></li>
+              <li><a class="dropdown-item" href="office.html">Back Office Support</a></li>
+              <li><hr class="dropdown-divider"></li>
+
+              <li><a class="dropdown-item" href="market.html">Marketing</a></li>
             </ul>
 
             <a   style=""class="nav-link dropdown-toggle" href="#" id="barDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Products
             </a>
             <ul class="dropdown-menu" aria-labelledby="barDropdown">
-              <li><a class="dropdown-item" href="#">CRM128
+              <li><a class="dropdown-item" href="crm.html">CRM128
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">PMP128</a></li>
                          </ul>
               <li  style=" margin-top: -2em;"class="nav-item">
-              <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="#">Contact Us</a>
+              <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="contact.html">Contact Us</a>
               </li>
               
           </li>
