checked for mobile responsiveness of other screens

--- a/crm.html
+++ b/crm.html
@@ -156,7 +156,7 @@
 </div>
 
 <div class="crm-grid">
-  <img src="assets/Ivm.png">
+  <img style="width: 27em !important;" src="assets/Ivm.png">
 
   <div class="grid-details">
     <h4>Inventory Management</h4>
@@ -165,7 +165,7 @@
 </div>
 
 <div class="crm-grid">
-  <img src="assets/hrm.png">
+  <img style="width: 30em !important;"  src="assets/hrm.png">
 
   <div class="grid-details">
     <h4>HR Management</h4>
@@ -174,7 +174,7 @@
 </div>
 
 <div class="crm-grid">
-  <img src="assets/dm.png">
+  <img style="width: 27em !important; " src="assets/dm.png">
 
   <div class="grid-details">
     <h4>Client Management</h4>
@@ -183,7 +183,7 @@
 </div>
 
 <div class="crm-grid">
-  <img src="assets/accmgt.png">
+  <img style="width: 8em !important;" src="assets/accmgt.png">
 
   <div class="grid-details">
     <h4>Accounts Management</h4>
