--- a/quote.html
+++ b/quote.html
@@ -129,7 +129,7 @@
     
     <label for="tel">
       Phone number </label>
-      <input type="tel" id="tel">
+      <input type="tel" id="tel" placeholder="+1(555) 000-0000" >
 
       <label for="email">
         Email </label>
