--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <button onclick = "window.location.href='quote.html';" class="Pricing">Get Pricing</button> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5" />
+</svg> -->
+
       </button>
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
