continued working on the desktop view

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -671,7 +671,7 @@ setInterval(() => {
         $(this).find(".chevup").hide();
         $(this).find(".chevdown").show();
       }).on("hide.bs.dropdown", function() {
-        $(this).find(".chedown").hide();
+        $(this).find(".chevdown").hide();
         $(this).find(".chevup").show();
       });
     
