--- a/who-we-are.html
+++ b/who-we-are.html
@@ -174,6 +174,7 @@
             <a class="nav-link" href="#">Link</a>
           </li> -->
           <li class="nav-item dropdown">
+            <div>
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Company <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" class="chevup" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
@@ -196,7 +197,9 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Insight</a></li>
               </ul>
+            </div>
 
+            <div>
             <a style=" " class="nav-link dropdown-toggle" href="services.html" id="navDropdown" id="dropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Services  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" class="chevup2" stroke="currentColor" >
                 <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
@@ -229,6 +232,9 @@
 
               <li><a class="dropdown-item" href="market.html">Marketing</a></li>
             </ul>
+            </div>
+
+            <div>
 
             <a   style=""class="nav-link dropdown-toggle" href="#" id="barDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Products   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" class="chevup3" stroke="currentColor" class="w-6 h-6">
@@ -245,7 +251,7 @@
               <li><a class="dropdown-item" href="crm.html">CRM128
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">PMP128</a></li>
-                         </ul>
+                         </ul></div>
               <li  style=" margin-top: -2em;"class="nav-contact" id="navContact"> 
               <a  style="font-family: 'Archivo', sans-serif; color: #091E42;" class="nav-link" href="contact.html">Contact Us</a>
               </li>
