making changes on review

--- a/crm.html
+++ b/crm.html
@@ -184,7 +184,7 @@
              
               
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu" id="nav-bar-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="who-we-are.html">About Us</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Testimonies</a></li>
